# tinysys-rs

./: .gitattributes  .gitignore  README.md
tinysys-rs/: Cargo.toml
tinysys-rs/src/: debug.rs  lib.rs  macros.rs  uart.rs
tinysys-sys/: Cargo.toml  build.rs
tinysys-sys/c_sdk/: Makefile  git-HEAD.txt  objdump_libtinysys_sdk.txt
tinysys-sys/src/: lib.rs  sdk.rs
tinysys-tests/: Cargo.toml  copy_to_sdcard.sh
tinysys-tests/.cargo/: config.toml
tinysys-tests/src/: panic.rs  print.rs  printing.rs
